src/test/vm/method-non-object.php.exp
HipHop Fatal error: Uncaught exception 'BadMethodCallException' with message 'Call to a member function bar() on a non-object' in src/test/vm/method-non-object.php:4\nStack trace:\n#0 {main}
