src/test/vm/method-non-object.php
<?php
// Method call on non-object using FPushObjMethodD
$foo = 12;
$foo->bar();
echo "Hi.\n";
